samples/_failures_safe/1761434157_510508_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_190968ca.c: In function ‘main’:
./samples/SAFE/__tmp_190968ca.c:157:5: error: expected declaration or statement at end of input
  157 |     return 0;
      |     ^~~~~~
